# falling-particles

./: .gitignore  CMakeLists.txt
include/: IntVector2.h  Vector2.h  colorManager.h  config.h  gridManager.h  particle.h  simManager.h  timer.h  utils.h
src/: colorManager.c  falling_sand.c  main.c  particle.c
test/: box.cpp  raylib_test.c
